objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holder_s_Address__c</fullName>
        <label>Account Holder&apos;s Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Contact_Number__c</fullName>
        <label>Account Holder&apos;s Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Email__c</fullName>
        <label>Account Holder&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Holder_s_Name__c</fullName>
        <label>Account Holder&apos;s Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Salary Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_in_years__c</fullName>
        <label>Age(in years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <label>Continent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Antartica</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Continent__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Sri Lanka</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>Mali</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Ross Island</fullName>
                </value>
                <value>
                    <fullName>Wilkes Land</fullName>
                </value>
                <value>
                    <fullName>American Highland</fullName>
                </value>
                <value>
                    <fullName>South Pole</fullName>
                </value>
                <value>
                    <fullName>Enderby Land</fullName>
                </value>
                <value>
                    <fullName>Western Australia</fullName>
                </value>
                <value>
                    <fullName>South Australia</fullName>
                </value>
                <value>
                    <fullName>Queensland</fullName>
                </value>
                <value>
                    <fullName>New South Wales</fullName>
                </value>
                <value>
                    <fullName>Northern Territory</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Venezula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Card_Number__c</fullName>
        <label>Debit Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Credit_Card_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Credit Card Issued?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Debit_Card_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Debit Card Issued?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAN_Card_Number__c</fullName>
        <label>PAN Card Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <label>Bank Account</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>